--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ input[type=range]:focus::-ms-fill-upper {
       </p></div>
     </div>
 
-    <div id="explainerButton" class="text">sudo-self</div>
+    <div id="explainerButton" class="text">clock.sudo-self.com</div>
     <div id="explainer" class="text closed">
     	clock.sudo-self.com
       <p>clock with a background color derived from the current time.</p>
