--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <head>
 	<!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
-
+    <link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
+    <link type="application/manifest+json" rel="manifest">
     <!-- Your Chat Plugin code -->
     <div id="fb-customer-chat" class="fb-customerchat">
     </div>
